# skivvy-rserver

./: .gitignore  README.md  bootstrap.sh  configure-debug.sh  configure-release.sh  configure.ac
docs/: rserver-manual.text
src/: Makefile.am  PKI.cpp  plugin-rserver.cpp
src/include/skivvy/: plugin-rserver.h
